[project]
name = "momo-e2e-test"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "pytest-repeat",
    "pytest-rerunfailures",
    "pytest-timeout",
    "httpx",
    "python-dotenv",
    "ruff",
    "ty",
    "pyjwt",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
reruns = 3
reruns_delay = 1

[tool.ruff]
line-length = 100
